fix: title, meta tags for SEO

--- a/client/public/index.html
+++ b/client/public/index.html
@@ -6,8 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
     <meta
-      name="description"
-      content="Web app crated to cater to precily assessment"
+      name="Resizable React usecases"
+      content="Web app created to learn scalable end to end webapp"
     />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <!--
@@ -32,7 +32,7 @@
       integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx"
       crossorigin="anonymous"
     />
-    <title>Precily Web Assessment</title>
+    <title>Resizable Web Application</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
